# cuvs

./: .gitignore
cpp/: CMakeLists.txt
cpp/include/cuvs/neighbors/: common.hpp  ivf_flat.hpp
cpp/src/cluster/: kmeans_balanced.cuh
cpp/src/cluster/detail/: kmeans_balanced.cuh
cpp/src/neighbors/: ivf_flat_c.cpp  ivf_flat_index.cpp
cpp/src/neighbors/ivf_flat/: ivf_flat_build.cuh  ivf_flat_build_extend_float_int64_t.cu  ivf_flat_build_extend_half_int64_t.cu  ivf_flat_build_extend_int8_t_int64_t.cu  ivf_flat_build_extend_uint8_t_int64_t.cu  ivf_flat_helpers.cu  ivf_flat_serialize.cuh
cpp/src/neighbors/refine/: refine_device.cuh
examples/: build.sh  build_output.txt  buildandrun.sh  ncu-exp.sh  record-build.sh  run.sh
examples/cpp/: CMakeLists.txt  setup.py
examples/cpp/src/: common.cuh  ivf_flat_16.cu  ivf_flat_16.cuh  ivf_flat_16_binder.cu  ivf_flat_fp16_example-withpybind11.txt  ivf_flat_fp16_example.cu  ivf_flat_fp16_example.txt  ivf_flat_fp16_utils.cuh  qianxi-test.py  setup.py  setup.txt  test.py
examples/kernel-demo/: README.md  kernel.cu  kernel.txt  setup-test.sh  setup.py  test.py
python/cuvs/cuvs/neighbors/ivf_flat/: ivf_flat.pyx
